# agentic-cloud-pipeline-governance

./: .env.example  .env.prod.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DATA_LICENSES.md  DEVIATIONS.md  LICENSE  Makefile  NOTICE  README.md  REPORT.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker-release.yml
data/: .gitkeep
deploy/: Dockerfile.server  docker-compose.prod.yml
docker/: airflow-init.sh  airflow.Dockerfile
docs/: CONNECTING.md  OPERATIONS.md  PAPER_MAPPING.md  POLICY_AUTHORING.md  SECURITY.md
infra/opa/policies/: cost_budget.rego  cost_budget_test.rego  main.rego  main_test.rego  rate_limit.rego  rate_limit_test.rego  recovery_approval.rego  recovery_approval_test.rego  schema_compat.rego  schema_compat_test.rego
infra/postgres/init/: 00_schemas.sql  01_telemetry.sql  02_warehouse.sql  03_control.sql  04_approvals.sql
src/acde/: cli.py  config.py  db.py  logging.py
src/acde/agents/: adaptation.py  base.py  detection.py  monitoring.py  optimization.py  recovery.py  run.py  schema.py
src/acde/analysis/: analyze.py  figures.py  report.py  stats.py
src/acde/chaos/: injector.py  scenarios.py  stressor.py
src/acde/connectors/: __init__.py  airflow.py  base.py  noop.py  prefect.py  registry.py
src/acde/contracts/: __init__.py  actions.py  telemetry.py
src/acde/dataplane/: migrate.py  partitions.py
src/acde/dataplane/batch/: pipeline.py
src/acde/dataplane/batch/dags/: opengov_ingest.py  tpcds_ingest.py
src/acde/dataplane/datasets/: nyc_tlc_fetch.py  opengov_fetch.py  tpcds_gen.py
src/acde/dataplane/streaming/: consumer.py  kafka_io.py  producer.py  windows.py  workers.py
src/acde/eval/: __init__.py  adversarial.py  cross_model.py
src/acde/experiments/: baseline.py  baselines.py  configs.py  decision_quality.py  runner.py  scenarios.py
src/acde/human/: approvals.py  simulator.py
src/acde/llm/: client.py  mock.py
src/acde/llm/prompts/: monitoring.md  optimization.md  recovery.md  schema.md
src/acde/notify/: __init__.py  webhook.py
src/acde/ops/: __init__.py  gameday.py  health.py  roi.py
src/acde/orchestrator/: configs.py  control.py  locks.py  loop.py  soak.py
src/acde/policy/: executor.py  gate.py
src/acde/server/: __init__.py  app.py  dashboard.py  metrics.py
src/acde/server/templates/: base.html  dashboard.html
src/acde/telemetry/: collector.py  cost.py  freshness.py
tests/integration/: test_agents_e2e.py  test_chaos.py  test_dataplane.py  test_experiment_runner.py  test_failure_modes.py  test_orchestrator_e2e.py  test_policy.py  test_stack_health.py  test_telemetry.py
tests/unit/: test_adaptation.py  test_adversarial.py  test_agents.py  test_agents_lifecycle.py  test_analyze.py  test_approvals.py  test_baseline.py  test_baselines.py  test_batch_pipeline.py  test_cli.py  test_collector.py  test_config.py  test_config_dataplane.py  test_connectors.py  test_contracts.py  test_cost.py  test_cross_model.py  test_dashboard.py  test_datasets.py  test_db.py  test_decision_quality.py  test_detection.py  test_execution_modes.py  test_executor.py  test_experiment_configs.py  test_freshness.py  test_gate.py  test_human.py  test_injector.py  test_llm_client.py  test_llm_mock.py  test_locks.py  test_logging.py  test_loop.py  test_migrate.py  test_notify_control.py  test_orchestrator_configs.py  test_partitions.py  test_producer.py  test_roi_gameday.py  (+6 more)
