[project]
name = "acde"
version = "0.1.0"
description = "ACDE: Agentic Cloud Data Engineering — replication of arXiv:2512.23737"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "psycopg[binary]>=3.2,<4",
    "psycopg-pool>=3.2,<4",
    "tenacity>=8.4,<10",
    "pandas>=3.0.3",
    "pyarrow>=25.0.0",
    "confluent-kafka>=2.15.0",
    "httpx>=0.28.1",
    "anthropic>=0.116.0",
    "scipy>=1.17.1",
    "matplotlib>=3.11.0",
    "google-genai>=2.11.0",
    "openai>=2.46.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/acde"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
files = ["src/acde"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires the docker-compose stack (deselected in unit runs)",
]
addopts = "-q"

[tool.coverage.run]
source = ["src/acde"]
omit = [
    # Airflow DAGs and broker/network I/O — exercised by integration tests, not unit.
    "src/acde/dataplane/batch/dags/*",
    "src/acde/dataplane/streaming/kafka_io.py",
    "src/acde/dataplane/streaming/consumer.py",
    "src/acde/dataplane/datasets/nyc_tlc_fetch.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
