[project]
name = "acde"
version = "2.0.0"
description = "ACDE: policy-bounded agentic governance for cloud data pipelines"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = "Apache-2.0"
# Lean production core: agents, policy gate, connectors, operator API/CLI. The research testbed
# (benchmark, chaos, analysis, data plane) is an optional extra — see [project.optional-dependencies].
dependencies = [
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "psycopg[binary]>=3.2,<4",
    "psycopg-pool>=3.2,<4",
    "tenacity>=8.4,<10",
    "httpx>=0.28.1",
    "anthropic>=0.116.0",
    "google-genai>=2.11.0",
    "openai>=2.46.0",
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.51.0",
    "jinja2>=3.1.6",
]

[project.optional-dependencies]
# The paper-reproduction benchmark, chaos harness, analysis, and demo data plane (D-067).
research = [
    "pandas>=3.0.3",
    "pyarrow>=25.0.0",
    "confluent-kafka>=2.15.0",
    "scipy>=1.17.1",
    "matplotlib>=3.11.1",
]

[project.scripts]
acde = "acde.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    # research extras installed in dev so the full test suite (benchmark + analysis) runs
    "pandas>=3.0.3",
    "pyarrow>=25.0.0",
    "confluent-kafka>=2.15.0",
    "scipy>=1.17.1",
    "matplotlib>=3.11.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/acde"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
files = ["src/acde"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires the docker-compose stack (deselected in unit runs)",
]
addopts = "-q"

[tool.coverage.run]
source = ["src/acde"]
omit = [
    # Airflow DAGs and broker/network I/O — exercised by integration tests, not unit.
    "src/acde/dataplane/batch/dags/*",
    "src/acde/dataplane/streaming/kafka_io.py",
    "src/acde/dataplane/streaming/consumer.py",
    "src/acde/dataplane/datasets/nyc_tlc_fetch.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
